--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "dev": "HOST=0.0.0.0 rollup -c -w",
     "start": "sirv public --no-clear"
   },
   "devDependencies": {
@@ -16,7 +16,8 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.44.3"
+    "svelte": "^3.44.3",
+    "svelte-parallax": "^0.3.1"
   },
   "dependencies": {
     "sirv-cli": "^1.0.0",
