--- a/package.json
+++ b/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
-  "private": true,
+  "name": "website",
+  "version": "0.0.1",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "HOST=0.0.0.0 rollup -c -w",
-    "start": "sirv public --no-clear"
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "package": "svelte-kit package",
+    "preview": "svelte-kit preview",
+    "prepare": "svelte-kit sync"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "rollup": "^2.3.4",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.44.3",
-    "svelte-parallax": "^0.3.1"
+    "@sveltejs/adapter-auto": "next",
+    "@sveltejs/kit": "next",
+    "svelte": "^3.44.0"
   },
+  "type": "module",
   "dependencies": {
-    "sirv-cli": "^1.0.0",
-    "svelte-frappe-charts": "^1.9.1",
-    "svelte-i18n": "^3.3.13"
+    "sveltekit-i18n": "^2.1.4"
   }
 }
